--- a/index.html
+++ b/index.html
@@ -4,119 +4,125 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Main page</title>
+
+        <link rel="stylesheet" href="./style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        
+
       </head>
-      <body>
-        <header>
-            <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-              <li><a href="">Studio</a></li>
-              <li><a href="">Portfolio</a></li>
-              <li><a href="">Contacts</a></li>
+      <body class="body">
+        <header class="header"> 
+            <nav class="header-nav">
+            <a href="./index.html" class="logo" >Web<span class="logo-studio">Studio</span></a>
+            <ul class="header-list">
+              <li class="header-item"><a class="header-nav-link" href="./index.html">Studio</a></li>
+              <li class="header-item"><a class="header-nav-link" href="">Portfolio</a></li>
+              <li class="header-item"><a class="header-nav-link" href="">Contacts</a></li>
             </ul>
           </nav>
-          <address>
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <address class="address">
+          <ul class="adress-list">
+            <li class="adress-item"><a class="adress-item-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="adress-item"><a class="adress-item-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
         </header>
-        <main>
-          <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <main class="main">
+          <section class="hero">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button class="button" type="button">Order Service</button>
           </section>
           
-          <section>
-            <h2>Our Team</h2>
-            <ul>
-              <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business
+          <section class="section">
+            <h2 class="section-title">Our Values</h2>
+            <ul class="section-list">
+              <li class="section-item">
+                <h3 class="section-title">Strategy</h3>
+                <p class="section-text">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution.</p>
               </li>
-              <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+              <li class="section-item">
+                <h3 class="section-title">Punctuality</h3>
+                <p class="section-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
               </li>
-              <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+              <li class="section-item">
+                <h3 class="section-title">Diligence</h3>
+                <p class="section-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
               </li>
-              <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+              <li class="section-item">
+                <h3 class="section-title">Technologies</h3>
+                <p class="section-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
               </li>
             </ul>
           </section>
 
-          <section>
-            <h2>Our Team</h2>
-            <ul>
-              <li>
+          <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+              <li class="team-item">
                 <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
               </li>
-              <li>
+              <li class="team-item">
                 <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
               </li>
-              <li>
+              <li class="team-item">
                 <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
               </li>
-              <li>
+              <li class="team-item">
                 <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
               </li>
             </ul>
           </section>
 
-          <section>
-            <h2>Our Portfolio</h2>
-            <ul>
-              <li>
+          <section class="portfolio">
+            <h2 class="portfolio-title">Our Portfolio</h2>
+            <ul class="portfolio-list">
+              <li class="portfolio-item">
                 <img src="./images/banking.jpg" alt="banking app" width="360" height="300">
-                <h3>Banking App</h3>
-                <p>App</p>
+                <h3 class="portfolio-subtitle">Banking App</h3>
+                <p class="portfolio-text">App</p>
               </li>
-              <li>
+              <li class="portfolio-item">
                 <img src="./images/payment.jpg" alt="payment" width="360" height="300">
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
+                <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
               </li>
-              <li>
+              <li class="portfolio-item">
                 <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
-                <h3>Meditation App</h3>
-                <p>App</p>
+                <h3 class="portfolio-subtitle">Meditation App</h3>
+                <p class="portfolio-text">App</p>
               </li>
-              <li>
+              <li class="portfolio-item">
                 <img src="./images/service.jpg" alt="service" width="360" height="300">
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
+                <h3 class="portfolio-subtitle">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
               </li>
-                  <li>
+                  <li class="portfolio-item">
                     <img src="./images/illustrations.jpg" alt="illustrations" width="360" height="300">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p>
                   </li>
-                  <li>
+                  <li class="portfolio-item">
                     <img src="./images/courses.jpg" alt="courses" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-subtitle">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
                   </li>
             </ul>
           </section>
 
         </main>
-        <footer>
-          <a href="./index.html">WebStudio</a>
-          <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <footer class="footer">
+          <a href="./index.html" class="logo"><span class="footer-logo">Web</span>Studio</a>
+          <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
 
       </body>
