--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul class="header-list">
                 <li class="header-item"><a class="header-nav-link" href="./index.html">Studio</a></li>
-                <li class="header-item"><a class="header-nav-link" href="#">Portfolio</a></li>
-                <li class="header-item"><a class="header-nav-link" href="#">Contacts</a></li>
+                <li class="header-item"><a class="header-nav-link" href="">Portfolio</a></li>
+                <li class="header-item"><a class="header-nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="address">
