--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main page</title>
-
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,13 +25,14 @@
                 <li class="address-item"><a class="address-item-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+       <!--Section1--> 
     </header>
     <main class="main">
         <section class="hero">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
         </section>
-        
+        <!--Section2-->
         <section class="section">
             <h2 class="section-title">Our Values</h2>
             <ul class="section-list">
@@ -54,7 +54,7 @@
                 </li>
             </ul>
         </section>
-
+        <!--Section3-->
         <section class="team">
             <h2 class="team-title">Our Team</h2>
             <ul class="team-list">
@@ -80,7 +80,7 @@
                 </li>
             </ul>
         </section>
-
+        <!--Section4-->
         <section class="portfolio">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list">
@@ -117,8 +117,9 @@
             </ul>
         </section>
     </main>
+
     <footer class="footer">
-        <a href="./index.html" class="logo">Web<span class="footer-logo">Studio</span></a>
+        <a href="./index.html" class="footer-logo">Web<span class="footer-logo">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
