--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main page</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <header class="header"> 
@@ -25,16 +26,16 @@
                 <li class="address-item"><a class="address-item-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-       <!--Section1--> 
     </header>
+    <!--Section1-->
     <main class="main">
         <section class="hero">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button class="button" type="button">Order Service</button>
+            <button type="button" class="button">Order Service</button>
         </section>
         <!--Section2-->
         <section class="section">
-            <h2 class="section-title">Our Values</h2>
+            
             <ul class="section-list">
                 <li class="section-item">
                     <h3 class="section-item-title">Strategy</h3>
