--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <!--Section2-->
         <section class="section">
-            
+            <h2 class="section-hidden">Values</h2>
             <ul class="section-list">
                 <li class="section-item">
                     <h3 class="section-item-title">Strategy</h3>
